# merrin

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
examples/: notebook-merrin.ipynb  run-merrin.sh
examples/ecoli-small/: metabolic_network.sbml  pkn.txt  timeseries_kft.json
examples/ecoli-small/timeseries/: Fig5.csv  Fig7.csv  Fig8.csv
examples/instances/core-regulated/: pkn.txt  timeseries_t.json
examples/instances/core-regulated/timeseries/: Fig6.csv  Fig9.csv
examples/instances/large-scale/: metabolic_network.sbml  pkn.txt  timeseries_kft.json
examples/instances/large-scale/timeseries/: Fig3.csv  Fig4.csv  Fig5.csv
examples/instances/toy/: metabolic_network.sbml  pkn.txt  timeseries_kft.json
examples/instances/toy/timeseries/: Fig4.csv  Fig5.csv  Fig6.csv  Fig7.csv  Fig8.csv  Fig9.csv
merrin/: ASPApplication.py  ASPModel.py  DataProcessing.py  FBAPropagator.py  LPModel.py  Loader.py  MetabolicNetworks.py  Parameters.py  bnet2flexflux.py  bnutils.py  cli.py  utils.py
merrin/generators/: generators.py  timeseries.py
src/merrin/: __init__.py  app.py  learn.py
src/merrin/asp/: __init__.py  instantiater.py  template.py
src/merrin/asp/model/: learn.lp  learn_from_trace.lp
src/merrin/datastructure/: __init__.py  metabolic_network.py  observation.py
